--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Your Name">
-    <title>Your Name - Introduction</title>
+    <title>Arnab Barua - Introduction</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,20 +54,20 @@
 
     <main>
         <h1>About Me</h1>
-        <p>Hello! I'm [Your Name], a passionate [Your Profession/Field]. I am currently working on [Your current project/research]. I have a deep interest in [Your Interests] and enjoy [Your Hobbies]. This page is a brief introduction to who I am and what I do. I hope you find it interesting!</p>
+        <p>Hello! I'm Arnab Barua, a passionate aboout learning new things. I am currently working on LLM introduction webpage. I have a deep interest in Data and AI and I enjoy watching Youtube. This page is a little bit introduction to who I am and what I do. I hope you find it interesting!</p>
 
         <h2>Contact</h2>
         <p>If you would like to get in touch with me, feel free to reach out via any of the following platforms:</p>
 
         <div class="social-links" style="text-align: center;">
-            <a href="https://www.linkedin.com/in/your-linkedin" target="_blank">LinkedIn</a>
-            <a href="https://github.com/your-github" target="_blank">GitHub</a>
-            <a href="mailto:your-email@example.com">Email</a>
+            <a href="https://www.linkedin.com/in/arnab-barua-148360175 " target="_blank">LinkedIn</a>
+            <a href="https://github.com/arnabbarua20" target="_blank">GitHub</a>
+            <a href="mailto:arnabbaruaplus@gmail.com">Email</a>
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 [Your Name]. All Rights Reserved.</p>
+        <p>&copy; 2025 [Arnab Barua]. All Rights Reserved.</p>
     </footer>
 
 </body>
